Implement chunked LRU caching and enhance Napari UX
Added ChunkedLazyFieldRenderer for efficient large-dataset rendering with chunked LRU caching, auto-selected for datasets >10K frames. Enhanced Napari playback controls: integrated frame labels, improved play/pause button sync, throttled widget updates for high FPS, and fixed spacebar shortcut behavior. Updated documentation and tests to cover new caching and widget features. Marked related tasks as complete in TASKS.md and added comprehensive tests for chunked caching.

--- a/examples/16_field_animation.ipynb
+++ b/examples/16_field_animation.ipynb
@@ -49,10 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "65bb383a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output directory: /Users/edeno/Documents/GitHub/neurospatial/examples\n"
+     ]
+    }
+   ],
    "source": [
     "import tempfile\n",
     "from pathlib import Path\n",
@@ -92,10 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4545d71e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating circular arena environment...\n",
+      "Environment: Circular arena (radius=50 cm)\n",
+      "  1264 bins, 2D\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Creating circular arena environment...\")\n",
     "\n",
@@ -115,10 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a5e0252f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Simulating place field remapping...\n",
+      "Location A (trials 1-15): bin 817 at [60.0, 65.0] cm\n",
+      "Location B (trials 16-30): bin 486 at [40.0, 35.0] cm\n",
+      "Generated 30 trial fields (remapping at trial 15)\n"
+     ]
+    }
+   ],
    "source": [
     "# Simulate place field remapping across trials\n",
     "print(\"\\nSimulating place field remapping...\")\n",
@@ -191,10 +221,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fa2f05dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching Napari viewer...\n",
+      "\n",
+      "PLAYBACK CONTROLS (bottom-left):\n",
+      "  ▶ Play button - Start/stop animation\n",
+      "  ━ Time slider - Scrub through frames\n",
+      "\n",
+      "KEYBOARD SHORTCUTS:\n",
+      "  Spacebar - Play/pause (toggle)\n",
+      "  ← → Arrow keys - Step through frames\n",
+      "\n",
+      "SPEED CONTROL (left sidebar):\n",
+      "  📊 'Playback Speed' widget - Large slider (easy to drag)\n",
+      "  Drag to adjust FPS (1-120) - updates instantly\n",
+      "\n",
+      "✓ Napari viewer opened\n",
+      "  (Running in Jupyter - window stays open, execution continues)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:135: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
+      "application, not part of the napari viewer model. If your use case\n",
+      "requires access to qt_viewer, please open an issue to discuss.\n",
+      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    import napari\n",
@@ -260,10 +324,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "78b7b25b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exporting video with parallel rendering...\n",
+      "Rendering 30 frames using 4 workers...\n",
+      "Estimated time: ~4 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoding video...\n",
+      "✓ Video saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.mp4\n",
+      "✓ Video saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "if check_ffmpeg_available():\n",
     "    print(\"Exporting video with parallel rendering...\")\n",
@@ -306,10 +396,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "01af9e29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating HTML player...\n",
+      "Rendering 30 frames to PNG...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 31.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ HTML saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.html (0.7 MB)\n",
+      "✓ HTML player saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.html\n",
+      "  - Open in any web browser\n",
+      "  - Instant scrubbing with slider\n",
+      "  - Shareable (single file)\n",
+      "  - Keyboard shortcuts: space = play/pause, arrows = step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Generating HTML player...\")\n",
     "\n",
@@ -352,7 +477,51 @@
    "execution_count": null,
    "id": "d8d64d35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating Jupyter widget...\n",
+      "Pre-rendering 30 frames for widget...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0926dc09af614429b6edab0f0421674c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=0, description='Frame:', max=29), Output()), _dom_classes=('widget-inter…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67c910f790ed4d4087b2c79c1c53b612",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Play(value=0, max=29), IntSlider(value=0, description='Frame:', max=29)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Widget created (displayed above)\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    from IPython import get_ipython\n",
@@ -399,10 +568,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ec954eb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "Example 5: Large-Scale Session Pattern\n",
+      "================================================================================\n",
+      "\n",
+      "Demonstrating techniques for large datasets (60K-900K frames):\n",
+      "  - Use memory-mapped data (don't load into RAM)\n",
+      "  - Use Napari for exploration (lazy loading)\n",
+      "  - Subsample for video export\n",
+      "\n",
+      "Note: Using 1000 frames (~5 MB) for demo; scales to hours of data\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"=\" * 80)\n",
     "print(\"Example 5: Large-Scale Session Pattern\")\n",
@@ -427,10 +613,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fb7fcca1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Creating memory-mapped data file...\n",
+      "Populating with sample data (in practice, this is your recording)...\n",
+      "  (Writing in chunks to avoid memory issues)\n",
+      "\n",
+      "✓ Created memory-mapped dataset: 1,000 frames\n",
+      "  File size: 0.01 GB\n",
+      "  RAM usage: ~0 MB (memory-mapped, not loaded)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create memory-mapped data file (simulating neural recording)\n",
     "print(\"\\nCreating memory-mapped data file...\")\n",
@@ -491,10 +692,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ac16b863",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Option 1: Interactive exploration (Napari)\n",
+      "  Napari loads frames on-demand - would handle 900K frames efficiently\n",
+      "PLAYBACK CONTROLS:\n",
+      "  Bottom-left: ▶ Play button, time slider\n",
+      "  Keyboard: Spacebar (play/pause), ← → (step frames)\n",
+      "  Left sidebar: 📊 'Playback Speed' widget (large slider, 1-120 FPS)\n",
+      "✓ Napari viewer opened!\n",
+      "  (Same technique works for 60K-900K frame sessions)\n",
+      "  (Running in Jupyter - window stays open, execution continues)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:135: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
+      "application, not part of the napari viewer model. If your use case\n",
+      "requires access to qt_viewer, please open an issue to discuss.\n",
+      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nOption 1: Interactive exploration (Napari)\")\n",
     "print(\"  Napari loads frames on-demand - would handle 900K frames efficiently\")\n",
@@ -541,10 +770,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0376e1dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Option 2: Export subsampled video\n",
+      "  For large sessions: 250 Hz → 30 fps requires subsampling\n",
+      "  Subsampled: 120 frames (every 8th frame)\n",
+      "  Video duration: 4.0 seconds\n",
+      "  (For 900K frames, would produce ~1 hour video)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nOption 2: Export subsampled video\")\n",
     "print(\"  For large sessions: 250 Hz → 30 fps requires subsampling\")\n",
@@ -570,10 +812,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "53594682",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dry run estimation:\n",
+      "Running dry run estimation...\n",
+      "\n",
+      "============================================================\n",
+      "Video Export Dry Run Estimate:\n",
+      "============================================================\n",
+      "  Frames:          120\n",
+      "  Workers:         8\n",
+      "  Frame time:      19.4 ms\n",
+      "  Est. total time: 0.0 minutes\n",
+      "  Est. file size:  6 MB\n",
+      "  Output path:     /Users/edeno/Documents/GitHub/neurospatial/examples/16_large_session_summary.mp4\n",
+      "\n",
+      "To proceed, call again with dry_run=False\n",
+      "============================================================\n",
+      "\n",
+      "\n",
+      "  To render, run with dry_run=False\n"
+     ]
+    }
+   ],
    "source": [
     "if check_ffmpeg_available():\n",
     "    print(\"\\nDry run estimation:\")\n",
@@ -600,10 +868,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "41985045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cleaning up temporary files...\n",
+      "✓ Temporary files removed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:135: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
+      "application, not part of the napari viewer model. If your use case\n",
+      "requires access to qt_viewer, please open an issue to discuss.\n",
+      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
+     ]
+    }
+   ],
    "source": [
     "# Clean up temporary files\n",
     "print(\"\\nCleaning up temporary files...\")\n",
