Fix Jupyter widget duplicate display issue
Refactored widget backend to use persistent ipywidgets.Image and ipywidgets.HTML widgets, updating their properties instead of repeatedly calling display(). Eliminated interactive_output() and Output widget accumulation, ensuring only a single widget display in Jupyter notebooks. Updated tests to match new persistent widget pattern and removed unnecessary HTML mocks.

--- a/examples/16_field_animation.ipynb
+++ b/examples/16_field_animation.ipynb
@@ -251,7 +251,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:135: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:138: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
       "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
       "application, not part of the napari viewer model. If your use case\n",
       "requires access to qt_viewer, please open an issue to discuss.\n",
@@ -341,7 +341,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.67it/s]\n"
+      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.75it/s]\n"
      ]
     },
     {
@@ -412,7 +412,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 31.57it/s]"
+      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 30.24it/s]"
      ]
     },
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d8d64d35",
    "metadata": {},
    "outputs": [
@@ -489,26 +489,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0926dc09af614429b6edab0f0421674c",
+       "model_id": "164b3e6037eb4cd1a07d923e6a47ea56",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='Frame:', max=29), Output()), _dom_classes=('widget-inter…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67c910f790ed4d4087b2c79c1c53b612",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Play(value=0, max=29), IntSlider(value=0, description='Frame:', max=29)))"
+       "VBox(children=(HBox(children=(Play(value=0, max=29), IntSlider(value=0, description='Frame:', max=29))), HTML(…"
       ]
      },
      "metadata": {},
@@ -716,7 +702,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:135: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:138: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
       "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
       "application, not part of the napari viewer model. If your use case\n",
       "requires access to qt_viewer, please open an issue to discuss.\n",
@@ -829,7 +815,7 @@
       "============================================================\n",
       "  Frames:          120\n",
       "  Workers:         8\n",
-      "  Frame time:      19.4 ms\n",
+      "  Frame time:      20.5 ms\n",
       "  Est. total time: 0.0 minutes\n",
       "  Est. file size:  6 MB\n",
       "  Output path:     /Users/edeno/Documents/GitHub/neurospatial/examples/16_large_session_summary.mp4\n",
@@ -879,17 +865,6 @@
       "\n",
       "Cleaning up temporary files...\n",
       "✓ Temporary files removed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:135: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
-      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
-      "application, not part of the napari viewer model. If your use case\n",
-      "requires access to qt_viewer, please open an issue to discuss.\n",
-      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
      ]
     }
    ],
