Improve caching and controls for animation backends
Enhances napari and widget backends with configurable per-frame and chunked LRU caching, adds thread safety for cache access, and exposes new parameters for cache size and chunking. Video backend now supports CRF-based quality control and encoding presets, with improved documentation. Multi-field support and backend-specific kwargs are now properly forwarded and documented. Example notebook updated to reflect new controls and caching strategies.

--- a/examples/16_field_animation.ipynb
+++ b/examples/16_field_animation.ipynb
@@ -231,17 +231,28 @@
      "text": [
       "Launching Napari viewer...\n",
       "\n",
-      "PLAYBACK CONTROLS (bottom-left):\n",
-      "  ▶ Play button - Start/stop animation\n",
-      "  ━ Time slider - Scrub through frames\n",
+      "ENHANCED PLAYBACK CONTROLS:\n",
       "\n",
-      "KEYBOARD SHORTCUTS:\n",
+      "Built-in Controls (bottom-left):\n",
+      "  ▶ Play button - Start/stop animation\n",
+      "  ━ Time slider - Scrub through frames with instant seeking\n",
+      "  Frame counter - Shows current frame (e.g., '1/30')\n",
+      "\n",
+      "Enhanced Widget (left sidebar - auto-added):\n",
+      "  ⏯ Large Play/Pause button - Toggle animation (synced with spacebar)\n",
+      "  📊 Speed (FPS) slider - 200px wide, 1-120 FPS range\n",
+      "  📋 Frame counter - 'Frame: 15 / 30' with trial label\n",
+      "  ✓ Updates in real-time during playback\n",
+      "\n",
+      "Keyboard Shortcuts:\n",
       "  Spacebar - Play/pause (toggle)\n",
       "  ← → Arrow keys - Step through frames\n",
       "\n",
-      "SPEED CONTROL (left sidebar):\n",
-      "  📊 'Playback Speed' widget - Large slider (easy to drag)\n",
-      "  Drag to adjust FPS (1-120) - updates instantly\n",
+      "Memory Efficiency:\n",
+      "  - Lazy loading with LRU caching (1000 frame cache)\n",
+      "  - Chunked caching for >10K frames (100 frames/chunk)\n",
+      "  - Instant seeking even with 100K+ frames (<100ms)\n",
+      "  - GPU-accelerated rendering\n",
       "\n",
       "✓ Napari viewer opened\n",
       "  (Running in Jupyter - window stays open, execution continues)\n"
@@ -251,7 +262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:138: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
       "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
       "application, not part of the napari viewer model. If your use case\n",
       "requires access to qt_viewer, please open an issue to discuss.\n",
@@ -336,10 +347,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7f8f064d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating multi-field comparison...\n",
+      "\n",
+      "Simulating 3 neurons with different spatial tuning:\n",
+      "  Neuron A: Stable field at location A\n",
+      "  Neuron B: Remaps from A → B at trial 15\n",
+      "  Neuron C: Stable field at location B\n",
+      "\n",
+      "Launching multi-field Napari viewer...\n",
+      "\n",
+      "LAYOUT: Horizontal (side-by-side comparison)\n",
+      "  - All fields share same color scale (fair comparison)\n",
+      "  - Synchronized playback across layers\n",
+      "  - Custom layer names for clarity\n",
+      "\n",
+      "PLAYBACK CONTROLS (same as single-field viewer):\n",
+      "  Bottom-left: ▶ Play button, time slider\n",
+      "  Keyboard: Spacebar (play/pause), ← → (step frames)\n",
+      "  Left sidebar: 📊 'Playback Speed' widget\n",
+      "\n",
+      "✓ Multi-field viewer opened!\n",
+      "\n",
+      "TIP: Watch how Neuron B remaps while A and C stay stable\n",
+      "TIP: Try different layouts - change 'horizontal' to 'vertical' or 'grid'\n",
+      "  (Running in Jupyter - window stays open, execution continues)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
+      "application, not part of the napari viewer model. If your use case\n",
+      "requires access to qt_viewer, please open an issue to discuss.\n",
+      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    import napari\n",
@@ -460,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "78b7b25b",
    "metadata": {},
    "outputs": [
@@ -477,7 +530,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.59it/s]\n"
+      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.78it/s]\n"
      ]
     },
     {
@@ -487,6 +540,13 @@
       "Encoding video...\n",
       "✓ Video saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.mp4\n",
       "✓ Video saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-20 09:18:44.662 python[56152:480587307] IMKClient Stall detected, *please Report* your user scenario attaching a spindump (or sysdiagnose) that captures the problem - (imkxpc_bundleIdentifierWithReply:) block performed very slowly (3.12 secs).\n"
      ]
     }
    ],
@@ -532,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "01af9e29",
    "metadata": {},
    "outputs": [
@@ -548,7 +608,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 40.16it/s]"
+      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 49.72it/s]"
      ]
     },
     {
@@ -610,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d8d64d35",
    "metadata": {},
    "outputs": [
@@ -625,7 +685,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4900ebe1852846ccbd28ca2232a47f51",
+       "model_id": "eaa09578d1c44f20bb8237969411eaaa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -690,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ec954eb2",
    "metadata": {},
    "outputs": [
@@ -735,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "fb7fcca1",
    "metadata": {},
    "outputs": [
@@ -814,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ac16b863",
    "metadata": {},
    "outputs": [
@@ -825,10 +885,23 @@
       "\n",
       "Option 1: Interactive exploration (Napari)\n",
       "  Napari loads frames on-demand - would handle 900K frames efficiently\n",
+      "\n",
+      "CHUNKED CACHING FOR LARGE DATASETS:\n",
+      "  - Auto-enabled for >10K frames (this demo has 1000, but shows the pattern)\n",
+      "  - Caches frames in chunks of 100 (not individual frames)\n",
+      "  - Pre-loads neighboring frames for smooth sequential playback\n",
+      "  - Reduces cache overhead: 900K frames → 9K chunks\n",
+      "  - LRU eviction: keeps recently accessed chunks in memory\n",
+      "  - Benefits:\n",
+      "    • 10x fewer cache entries (faster lookups)\n",
+      "    • Better sequential playback (pre-loaded neighbors)\n",
+      "    • Same instant seeking (<100ms even for 900K frames)\n",
+      "\n",
       "PLAYBACK CONTROLS:\n",
       "  Bottom-left: ▶ Play button, time slider\n",
       "  Keyboard: Spacebar (play/pause), ← → (step frames)\n",
       "  Left sidebar: 📊 'Playback Speed' widget (large slider, 1-120 FPS)\n",
+      "\n",
       "✓ Napari viewer opened!\n",
       "  (Same technique works for 60K-900K frame sessions)\n",
       "  (Running in Jupyter - window stays open, execution continues)\n"
@@ -838,7 +911,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:138: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
       "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
       "application, not part of the napari viewer model. If your use case\n",
       "requires access to qt_viewer, please open an issue to discuss.\n",
@@ -908,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "0376e1dd",
    "metadata": {},
    "outputs": [
@@ -950,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "53594682",
    "metadata": {},
    "outputs": [
@@ -967,7 +1040,7 @@
       "============================================================\n",
       "  Frames:          120\n",
       "  Workers:         8\n",
-      "  Frame time:      19.6 ms\n",
+      "  Frame time:      22.2 ms\n",
       "  Est. total time: 0.0 minutes\n",
       "  Est. file size:  6 MB\n",
       "  Output path:     /Users/edeno/Documents/GitHub/neurospatial/examples/16_large_session_summary.mp4\n",
@@ -1006,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "41985045",
    "metadata": {},
    "outputs": [
@@ -1017,6 +1090,17 @@
       "\n",
       "Cleaning up temporary files...\n",
       "✓ Temporary files removed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
+      "application, not part of the napari viewer model. If your use case\n",
+      "requires access to qt_viewer, please open an issue to discuss.\n",
+      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
      ]
     }
    ],
