Add disk-backed HTML animation and frame reuse option
Introduces non-embedded HTML animation output in html_backend.py, allowing large frame sequences to be referenced from disk instead of embedded as base64. Adds a reuse_artists option to parallel_render_frames for faster frame rendering by updating image data in-place, improving performance for large animations.

--- a/examples/16_field_animation.ipynb
+++ b/examples/16_field_animation.ipynb
@@ -357,7 +357,13 @@
      "text": [
       "Creating multi-field comparison...\n",
       "\n",
-      "Simulating 3 neurons with different spatial tuning:\n",
+      "Simulating 3 neurons with different spatial tuning:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  Neuron A: Stable field at location A\n",
       "  Neuron B: Remaps from A → B at trial 15\n",
       "  Neuron C: Stable field at location B\n",
@@ -530,7 +536,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.78it/s]\n"
+      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.84it/s]\n"
      ]
     },
     {
@@ -540,13 +546,6 @@
       "Encoding video...\n",
       "✓ Video saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.mp4\n",
       "✓ Video saved to /Users/edeno/Documents/GitHub/neurospatial/examples/16_place_field_remapping.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-20 09:18:44.662 python[56152:480587307] IMKClient Stall detected, *please Report* your user scenario attaching a spindump (or sysdiagnose) that captures the problem - (imkxpc_bundleIdentifierWithReply:) block performed very slowly (3.12 secs).\n"
      ]
     }
    ],
@@ -608,7 +607,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 49.72it/s]"
+      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 50.37it/s]"
      ]
     },
     {
@@ -685,7 +684,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eaa09578d1c44f20bb8237969411eaaa",
+       "model_id": "e2590904921d4cf682f3ed2aa302eb36",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1040,7 +1039,7 @@
       "============================================================\n",
       "  Frames:          120\n",
       "  Workers:         8\n",
-      "  Frame time:      22.2 ms\n",
+      "  Frame time:      20.8 ms\n",
       "  Est. total time: 0.0 minutes\n",
       "  Est. file size:  6 MB\n",
       "  Output path:     /Users/edeno/Documents/GitHub/neurospatial/examples/16_large_session_summary.mp4\n",
@@ -1090,17 +1089,6 @@
       "\n",
       "Cleaning up temporary files...\n",
       "✓ Temporary files removed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
-      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
-      "application, not part of the napari viewer model. If your use case\n",
-      "requires access to qt_viewer, please open an issue to discuss.\n",
-      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
      ]
     }
    ],
