Update animation overlay notebooks with outputs and error handling
Added execution outputs and error traces to the animation overlay example notebooks. Updated kernel metadata and improved printed messages for clarity. Noted TypeError for 'color' argument in napari add_tracks, and included FutureWarnings for deprecated arguments in napari. These changes help document current notebook behavior and issues for debugging and future development.

--- a/examples/16_field_animation.ipynb
+++ b/examples/16_field_animation.ipynb
@@ -262,7 +262,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:547: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
       "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
       "application, not part of the napari viewer model. If your use case\n",
       "requires access to qt_viewer, please open an issue to discuss.\n",
@@ -357,13 +357,7 @@
      "text": [
       "Creating multi-field comparison...\n",
       "\n",
-      "Simulating 3 neurons with different spatial tuning:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Simulating 3 neurons with different spatial tuning:\n",
       "  Neuron A: Stable field at location A\n",
       "  Neuron B: Remaps from A → B at trial 15\n",
       "  Neuron C: Stable field at location B\n",
@@ -391,7 +385,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:547: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
       "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
       "application, not part of the napari viewer model. If your use case\n",
       "requires access to qt_viewer, please open an issue to discuss.\n",
@@ -536,7 +530,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.84it/s]\n"
+      "Workers: 100%|██████████| 4/4 [00:02<00:00,  1.94it/s]\n"
      ]
     },
     {
@@ -607,7 +601,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 50.37it/s]"
+      "Encoding frames: 100%|██████████| 30/30 [00:00<00:00, 51.18it/s]"
      ]
     },
     {
@@ -627,6 +621,17 @@
      "output_type": "stream",
      "text": [
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:547: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
+      "application, not part of the napari viewer model. If your use case\n",
+      "requires access to qt_viewer, please open an issue to discuss.\n",
+      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
      ]
     }
    ],
@@ -684,7 +689,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2590904921d4cf682f3ed2aa302eb36",
+       "model_id": "219ea2e04cb74eeb8855368091334613",
        "version_major": 2,
        "version_minor": 0
       },
@@ -910,7 +915,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:167: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:547: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
       "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
       "application, not part of the napari viewer model. If your use case\n",
       "requires access to qt_viewer, please open an issue to discuss.\n",
@@ -1039,7 +1044,7 @@
       "============================================================\n",
       "  Frames:          120\n",
       "  Workers:         8\n",
-      "  Frame time:      20.8 ms\n",
+      "  Frame time:      20.6 ms\n",
       "  Est. total time: 0.0 minutes\n",
       "  Est. file size:  6 MB\n",
       "  Output path:     /Users/edeno/Documents/GitHub/neurospatial/examples/16_large_session_summary.mp4\n",
@@ -1049,6 +1054,17 @@
       "\n",
       "\n",
       "  To render, run with dry_run=False\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/edeno/Documents/GitHub/neurospatial/src/neurospatial/animation/backends/napari_backend.py:547: FutureWarning: Public access to Window.qt_viewer is deprecated and will be removed in\n",
+      "v0.6.0. It is considered an \"implementation detail\" of the napari\n",
+      "application, not part of the napari viewer model. If your use case\n",
+      "requires access to qt_viewer, please open an issue to discuss.\n",
+      "  is_playing = viewer.window.qt_viewer.dims.is_playing\n"
      ]
     }
    ],
@@ -1180,7 +1196,7 @@
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "neurospatial",
    "language": "python",
    "name": "python3"
   },
